frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  font-family: 'Inter', sans-serif;
}

@media screen and (min-width: 480px) {
  .card:nth-child(7n + 1) {
    grid-column: auto/span 2;
    grid-row: auto/span 2;
  }
}

.prompt::-webkit-scrollbar {
  width: 5px;
}

.prompt::-webkit-scrollbar-thumb {
  background-color: #666e75;
  border-radius: 5px;
}
.site-container {
  min-height: 100vh;
}

main {
  flex: 1;
}
h1 {
  font-size: 2rem;
  color: #542d8e;
  font-weight: bold;
  text-decoration: none;
}
h3 {
  font-size: 1.2rem;
  color: #542d8e;
  font-weight: bold;
  text-decoration: none;
}
.fa-bars {
  color: white;
}
.btn-primary {
  min-width: 120px;
}
.btn-hamburger:hover {
  background: limegreen;
} 
.btn-hamburger {
  background: #542d8e;
} 
.btn-hamburger:active {
  background: #542d8e !important;
}

.btn-primary,
.btn-outline-primary,
.nav-bar-toggle-menu, .btn-primary:focus{
  
  border: none;
  outline: none;
  background-color: #542d8e;
  color: #ffffff;
}
.btn-primary:hover, #button-search:hover {
  background-color: limegreen;
  outline: none;
  box-shadow: none;
}


.btn-primary:active {
  background-color: #542d8e !important;

}

.purple-text,
#basic-nav-dropdown,
#admin-nav-dropdown {
  color: #542d8e;
}
.purple-text:hover,
#basic-nav-dropdown:hover,
#admin-nav-dropdown:hover {
  color: limegreen;
}
.purple-text:focus,
#basic-nav-dropdown:focus,
#admin-nav-dropdown:focus {
  color: #542d8e;
}

.navbar-toggler:hover {
  background-color: limegreen;
  outline: White 3px solid;
  box-shadow: none;
}
.navbar-toggler {
  background-color: #542d8e;
  outline: White 3px solid;
  box-shadow: none;
}

.btn-primary:disabled {
  background-color: #a67bf7;
}

.lime-green-badge {
  background-color: limegreen;
  color: white;
}

.designs {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.rating span {
  color: #542d8e;
}

.design {
  border: 1px #404040 solid;
  margin: 1rem;
}

.design img {
  width: 100%;
  max-width: 400px;
}

.design-title {
  height: 3rem;
  overflow: hidden;
  text-overflow: ellipsis;
  /* white-space: nowrap; */
}

.design-info {
  padding: 1rem;
}

.design-info {
  padding: 1rem;
}

.img-large {
  max-width: 100%;
}
.img-medium {
  max-width: 100%;
}

.img-thumbnail {
  height: 80px;
}

.small-container {
  max-width: 600px;
}

.checkout-steps > div {
  border-bottom: 0.2rem solid #a0a0a0;
  color: #a0a0a0;
}

.checkout-steps > div.active {
  border-bottom: 0.2rem solid #542d8e;
  color: #542d8e;
}

/* side bar */
.nav-link {
  color: #542d8e;
  font-weight: bold;
}
.navbar-style {
  font-weight: bold;
}
.side-navbar {
  width: 240px;
  height: 100vh;
  position: fixed;
  left: -300px;
  background-color: White;
  transition: 0.5s;
  border: solid #542d8e 3px;
  border-top-right-radius: 15px;
}
.site-container {
  transition: 0.4s;
}
.active.cont {
  margin-left: 240px;
}

.active-nav {
  left: 0;
}
.site-container.active-cont {
  margin-left: 240px; /* Adjust the value as needed to match the sidebar width */
  transition: margin-left 0.4s ease; /* Add transition effect to smooth animation */
}

.text-bold {
  font-weight: bold;
}

.footer {
  display: flex;
  align-items: center;
  justify-content: center;
  color: white;
  height: 80px;
  background-color: #542d8e;
}
.cart-link {
  display: flex;
  align-items: center;
}

.custom-badge-circle {
  border-radius: 50%; /* Make it a circle */
  width: 24px; /* Adjust the width and height to control the badge size */
  height: 24px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #542d8e; /* Add your preferred background color */
  color: white;
  font-size: 15px; /* Adjust the font size as needed */
}

.fly-rating {
  margin: 2px;
 width: 18px;
 height: 18px;
}
span { display: inline-block}

